--- a/index.html
+++ b/index.html
@@ -52,19 +52,28 @@
         </div>
     </div>
 
-    <!-- HEADER & NAVIGATION -->
-    <header class="mb-8">
-        <div class="container mx-auto px-4">
-            <nav>
-                <ul class="flex justify-center flex-wrap gap-6 text-lg font-medium">
-                    <li><a href="#about" class="text-primary-blue hover:text-accent-green transition duration-200">About</a></li>
-                    <li><a href="#resume" class="text-primary-blue hover:text-accent-green transition duration-200">Experience</a></li>
-                    <li><a href="#portfolio" class="text-primary-blue hover:text-accent-green transition duration-200">Portfolio</a></li>
-                    <li><a href="#contact" class="text-primary-blue hover:text-accent-green transition duration-200">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+   <header>
+  <div class="container">
+
+    <!-- 🌟 Banner Image 🌟 -->
+    <div class="banner-container" style="text-align:center; margin-bottom:20px;">
+      <img src="images/Microeconomics of Microservices Banner.png" 
+           alt="Molla Negash Banner" 
+           style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+    </div>
+
+    <h1>Molla Negash</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
     <!-- ABOUT SECTION -->
     <section id="about" class="container mx-auto px-4 mb-12">
