--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
 <body>
 
 <header>
-  <div class="container">
+  <!-- 🌟 Banner Image 🌟 -->
+<div class="banner-container" style="text-align:center; margin:15px 0 20px 0;">
+  <img src="images/Microeconomics of Microservices Banner.png" 
+       alt="Molla Negash Banner" 
+       style="max-width:80%; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1); display:block; margin:0 auto;">
+</div>
 
-    <!-- 🌟 Banner Image 🌟 -->
-    <div class="banner-container" style="text-align:center; margin-bottom:20px;">
-      <img src="images/Microeconomics of Microservices Banner.png" 
-           alt="Molla Negash Banner" 
-           style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
-    </div>
 
     <h1>Molla Negash</h1>
     <nav>
