Fix image width in banner for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 }
 @media (max-width: 500px) {
     .banner-container img {
-        width: 100%;
+        max-width: 100%;
     }
 }
+
 
     footer {
       text-align: center;
