Modify banner image and adjust layout
Updated banner image styles and removed header section.

--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
 </head>
 <body>
 
-<header>
-  <!-- 🌟 Banner Image 🌟 -->
-<div class="banner-container" style="text-align:center; margin:15px 0 20px 0;">
+<div class="banner-container" style="text-align:center; margin-bottom:20px;">
   <img src="images/Microeconomics of Microservices Banner.png" 
        alt="Molla Negash Banner" 
-       style="max-width:80%; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1); display:block; margin:0 auto;">
+       style="width:100%; height:120px; object-fit:cover; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
 </div>
+
 
 
     <h1>Molla Negash</h1>
