--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 <div class="banner-container" style="text-align:center; margin-bottom:20px;">
   <img src="images/Microeconomics of Microservices Banner.png" 
        alt="Molla Negash Banner" 
-       style="width:100%; height:120px; object-fit:cover; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+       style="width:100%; max-height:150px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
 </div>
+
 
 
 
