Adjust banner text style and size

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
   <img src="images/banner-background.png" 
        alt="Banner Background" 
        style="width:100%; max-height:150px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
-  <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
-              color:white; font-size:28px; font-weight:bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.6);">
+  <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); color:white; font-size:24px; font-weight:bold;">
     Molla Negash
   </div>
 </div>
+
 
 
 
