--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
 <body>
 
 <div class="banner-container" style="position:relative; text-align:center; margin-bottom:20px;">
-  <img src="images/banner-background.png" 
-       alt="Banner Background" 
-       style="width:100%; max-height:150px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+  <img src="images/Microeconomics of Microservices Banner.png" 
+     alt="Molla Negash Banner" 
+     style="width:100%; max-height:250px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+
   <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); color:white; font-size:24px; font-weight:bold;">
     Molla Negash
   </div>
