--- a/index.html
+++ b/index.html
@@ -92,13 +92,17 @@
 
 <div class="banner-container" style="position:relative; text-align:center; margin-bottom:20px;">
   <img src="images/Microeconomics of Microservices Banner.png" 
-     alt="Molla Negash Banner" 
-     style="width:100%; max-height:250px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
-
-  <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); color:white; font-size:24px; font-weight:bold;">
+       alt="Molla Negash Banner" 
+       style="width:100%; max-height:250px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+  
+  <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
+              color:#fff; font-size:26px; font-weight:600; letter-spacing:0.5px;
+              text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+              background: rgba(0,0,0,0.25); padding:6px 14px; border-radius:6px;">
     Molla Negash
   </div>
 </div>
+
 
 
 
