--- a/index.html
+++ b/index.html
@@ -95,13 +95,24 @@
        alt="Molla Negash Banner" 
        style="width:100%; max-height:250px; height:auto; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
   
-  <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%);
-              color:#fff; font-size:26px; font-weight:600; letter-spacing:0.5px;
-              text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
-              background: rgba(0,0,0,0.25); padding:6px 14px; border-radius:6px;">
-   
+  <!-- Name text overlay with background for readability -->
+  <div style="
+      position:absolute; 
+      top:50%; 
+      left:50%; 
+      transform:translate(-50%, -50%);
+      background-color: rgba(0, 0, 0, 0.4); /* semi-transparent dark layer */
+      color:white; 
+      font-size:26px; 
+      font-weight:bold; 
+      padding:8px 20px; 
+      border-radius:6px;
+      text-shadow:0 1px 3px rgba(0,0,0,0.5);
+  ">
+    Molla Negash
   </div>
 </div>
+
 
 
 
