--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <!-- Header with Navigation -->
 <header class="container" style="text-align:center; padding: 20px 0;">
   <h1 style="color: #007B7F; font-size: 28px; margin-bottom: 10px;">
-    Molla Negash: Business Information Architect | Cloud Strategy & Governance
+    Senior Software Engineer & Tech Lead | Business Information Architect
   </h1>
 
   <nav>
